# simpler

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  M5_DESIGN.md  PR_1090_CHIP_CALLABLE_ASYNC_REVISED_PLAN.md  README.md  RECONCILIATION_NOTES.md  ci.py  ci.sh  conftest.py  pto_isa.pin  pyproject.toml  pytest.ini
.agents/: AGENT.md  coding-guidance.md
.github/: dependabot.yml
cmake/: sanitizers.cmake
docs/: CONTRIBUTING.md  L3-L2-host-device-communication.md  L3-L2_host-device_communication.md  a5-sdma-overlay.md  aicore-kernel-programming.md  aicpu-callable-prewarm-plan.md  aicpu-kernel-launch-mechanisms.md  architecture-review-and-rust-analysis.md  architecture.md  atomic_minibench.md  batch_paged_attention_perf_summary.md  buffer-handle-abi.md  callable-identity-registration.md  callable-ipc-dynamic-register.md  case1_tail_oh_breakdown.md  chip-level-arch.md  ci.md  install.md  (+59 more)
python/bindings/: CMakeLists.txt  dist_worker_bind.h  task_interface.cpp  worker_bind.h
src/a5/platform/onboard/host/: CMakeLists.txt  aicpu_loader.cpp  aicpu_loader.h  aicpu_topology_probe.cpp  aicpu_topology_probe.h  comm_hccl.cpp  device_runner.cpp  device_runner.h  host_regs.cpp  memory_allocator.cpp  profiling_copy.cpp  pto_runtime_c_api.cpp
src/common/log/: CMakeLists.txt  host_log.cpp
src/common/log/include/: host_log.h
src/common/log/include/common/: strace.h
src/common/sim_context/: CMakeLists.txt  cpu_sim_context.cpp  cpu_sim_context.h
tests/cpp/: CMakeLists.txt  test_coupling.cpp  test_coupling_stub.cpp  test_dep_pool.cpp  test_handshake.cpp  test_heap_ring.cpp  test_ready_queue.cpp  test_ring_buffer_edge.cpp  test_runtime_graph.cpp  test_scheduler_edge.cpp  test_scope.cpp  test_shared_memory.cpp  test_stubs.cpp  test_task_ring.cpp  test_task_state.cpp  test_tensor_overlap.cpp  test_tensormap.cpp  test_tensormap_edge.cpp
tests/ut/cpp/: CMakeLists.txt  test_a2a3_pto2_fatal.cpp  test_a2a3_pto2_manual_scope_api.cpp  test_a2a3_pto2_manual_scope_runtime.cpp  test_a2a3_tmr_tensor_offsets.cpp  test_child_memory.cpp  test_core_types.cpp  test_dispatch_payload.cpp  test_dist_orchestrator.cpp  test_dist_ring.cpp  test_dist_scheduler.cpp  test_hccl_comm.cpp  test_helpers.h  test_orchestrator.cpp  test_pto_types.cpp  test_ready_queue.cpp  test_ring_buffer.cpp  test_scheduler_state.cpp  test_shared_memory.cpp  test_submit_types.cpp  test_tensor.cpp  test_tensormap.cpp
tests/ut/cpp/a2a3/: test_a2a3_fatal.cpp  test_aicore_completion_mailbox.cpp  test_args_dump.cpp  test_dep_list_pool.cpp  test_dist_tensormap_ring.cpp  test_fanin_pool.cpp  test_orchestrator_fanin.cpp  test_orchestrator_report_fatal.cpp  test_orchestrator_submit.cpp  test_ready_queue.cpp  test_scheduler_state.cpp  test_shared_memory.cpp  test_spsc_queue.cpp  test_task_state.cpp  test_task_timing_slots.cpp  test_tensormap.cpp  test_wiring.cpp
tests/ut/cpp/a2a3/replay_graph/: CMakeLists.txt  test_graph_api.cpp  test_single_shot.cpp
tests/ut/cpp/a5/: test_a5_fatal.cpp  test_aicore_completion_mailbox.cpp  test_dep_list_pool.cpp  test_fanin_pool.cpp  test_host_log_off.cpp  test_link_isolation.cpp  test_orchestrator_fanin.cpp  test_orchestrator_report_fatal.cpp  test_ready_queue.cpp  test_runtime_coupling.cpp  test_runtime_lifecycle.cpp  test_scheduler_state.cpp  test_shared_memory.cpp  test_spsc_queue.cpp  test_task_allocator.cpp  test_task_args.cpp  test_task_state.cpp  test_tensormap.cpp  test_wiring.cpp
tests/ut/cpp/common/: test_args_dump_collector.cpp  test_buffer_pool_manager.cpp  test_device_arena.cpp  test_device_pool.cpp  test_elf_build_id.cpp  test_error_code_names.cpp  test_host_device_channel.cpp  test_host_device_mapped_region.cpp  test_host_device_memory.cpp  test_l3_l2_message_queue.cpp  test_l3_l2_orch_comm.cpp  test_l3_l2_orch_comm_service.cpp  test_l3_l2_orch_comm_sim_runner.cpp  test_l3_l2_orch_endpoint.cpp  test_orch_so_file.cpp  test_pmu_collector.cpp  test_profiler_base.cpp  test_profiler_device_engine.cpp  test_runtime_orch_so.cpp  test_runtime_timeout_config.cpp  test_scope_stats_collector.cpp  test_trb_runtime_temp_buffer.cpp
tests/ut/cpp/hardware/: test_comm_lifecycle.cpp  test_hccl_comm.cpp  test_l3_l2_orch_comm_onboard_runner.cpp
tests/ut/cpp/hierarchical/: test_mailbox_control_layout.cpp  test_orchestrator.cpp  test_remote_endpoint.cpp  test_remote_wire.cpp  test_scheduler.cpp  test_scope.cpp  test_tensormap.cpp  test_worker_manager.cpp
tests/ut/cpp/platform/: test_platform_host_log.cpp  test_platform_memory_allocator.cpp
tests/ut/cpp/pto2_a2a3/: test_a2a3_pto2_fatal.cpp  test_boundary_edge.cpp  test_core_types.cpp  test_coupling.cpp  test_coupling_stub.cpp  test_dispatch_payload.cpp  test_handshake.cpp  test_orchestrator_fatal.cpp  test_orchestrator_submit.cpp  test_ready_queue.cpp  test_ring_buffer.cpp  test_ring_buffer_edge.cpp  test_runtime_graph.cpp  test_runtime_lifecycle.cpp  test_runtime_status.cpp  test_scheduler_edge.cpp  test_scheduler_state.cpp  test_shared_memory.cpp  test_submit_types.cpp  test_tensormap_edge.cpp
tests/ut/cpp/pto2_a5/: test_a5_pto2_fatal.cpp
tests/ut/cpp/stubs/: test_stubs.cpp
tests/ut/cpp/types/: test_buffer_handle.cpp  test_call_config.cpp  test_child_memory.cpp  test_chip_callable_upload_immutable.cpp  test_chip_max_tensor_args.cpp  test_pto_types.cpp  test_tensor.cpp
tools/cann-examples/aicore-notification-perf/device-aicpu/: CMakeLists.txt  consumer.cpp
tools/cann-examples/aicore-notification-perf/host/: CMakeLists.txt  launch.cpp
tools/cann-examples/aicpu-device-query/device/: CMakeLists.txt  aicpu_query.cpp
tools/cann-examples/aicpu-device-query/host/: CMakeLists.txt  query_device_hal.cpp
tools/cann-examples/aicpu-kernel-launch/device/: CMakeLists.txt  hello_aicpu.cpp
tools/cann-examples/aicpu-kernel-launch/host/: CMakeLists.txt  launch_hello.cpp
tools/cann-examples/aicpu-mmio-probes/device/: CMakeLists.txt  probes.cpp
tools/cann-examples/aicpu-thread-spread/device/: CMakeLists.txt  aicpu_thread_spread.cpp
tools/cann-examples/query/: CMakeLists.txt  query.cpp
(+2208 files in other folders)
